translation-tool/inputs/source_meta/objects/Package__c.object
<CustomObject>
    <description>Will serve as a catalog for Plans</description>
    <fields>
        <fullName>Class_A_ID__c</fullName>
        <description>The Class A ID (DSS) for this package.</description>
        <inlineHelpText>The Class A ID (DSS) for this package.</inlineHelpText>
        <label>Class A ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this package active or inactive?</description>
        <inlineHelpText>Is this package active or inactive?</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Term__c</fullName>
        <description>What is service term (in mos.) for this package?</description>
        <inlineHelpText>What is service term (in mos.) for this package?</inlineHelpText>
        <label>Package Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>DSS Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IDU+ODU</fullName>
                </value>
                <value>
                    <fullName>IDU Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Path_ID__c</fullName>
        <description>Unique ID for informatica task for DSS catalog migration project</description>
        <externalId>true</externalId>
        <label>Path ID</label>
        <length>254</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <description>Product catalog path to this package.</description>
        <inlineHelpText>Product catalog path to this package.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <description>Program code applicable to this package.</description>
        <inlineHelpText>Program code applicable to this package.</inlineHelpText>
        <label>DSS Program Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>The program name associated with this package.</description>
        <inlineHelpText>The program name associated with this package.</inlineHelpText>
        <label>DSS Program Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>